fix bleeding filters

--- a/static/style.css
+++ b/static/style.css
@@ -90,10 +90,6 @@ table {
 
 .filters {
     grid-area: filters;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
     text-align: center;
     overflow-y: auto;
 }
@@ -194,7 +190,8 @@ table {
 
 .filters button.alphabet {
     font-size: 16px;
-    width: 32px;
+    width: 28px;
+    height: 28px;
 }
 
 .filters button:hover {
